<resources>
    <string name="anchor_platfrom_list">主播榜</string>
    <string name="user_platfrom_list">用户榜</string>
    <string name="list_the_reset">每周榜单重置</string>
    <string name="zhou_bang_as">距周榜截止:</string>
    <string name="week_cur">周贡献</string>
    <string name="anchor_related">主播相关</string>
    <string name="play_back">回放</string>
    <string name="my_member">我的会员</string>
    <string name="now_renew">立即续费</string>
    <string name="now_recharge">立即充值</string>
    <string name="now_buy">立即购买</string>
    <string name="vip_member_meal">会员套餐</string>
    <string name="all">总计：</string>
    <string name="other_login_fun">其他登录方式</string>
    <string name="phone_area">手机号归属地</string>
    <string name="please_user_register_prot">请同意用户协议</string>
    <string name="not_pass">未通过</string>
    <string name="me">我</string>
    <string name="sublim_success">提交成功,请等待管理员审核!</string>
    <string name="no_pass_real_name">抱歉,您的身份认证审核未通过</string>
    <string name="Id_number">ID号</string>
    <string name="user_intro">个性签名</string>
    <string name="my_anchor_lv">我的等级</string>
    <string name="zhubo_lv">店铺等级</string>
    <string name="shiming_renzhen">实名认证</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="no_bind">未绑定</string>
    <string name="have_bind">已绑定</string>
    <string name="bing">绑定</string>
    <string name="no_apply">未认证</string>
    <string name="applying">审核中</string>
    <string name="invite_have_gift">我的邀请码</string>
    <string name="now_invite">立即邀请</string>
    <string name="my_sign_in">我的签到</string>
    <string name="recharge">充值</string>
    <string name="need_charge">付费</string>
    <string name="need_no_charge">免费</string>
    <string name="please_choose_pay_type">请选择收费方式</string>
    <string name="liveing_agree_rule">直播即代表您已同意</string>
    <string name="look_30">(用户可免费观看30秒)</string>
    <string name="now_live_type">当前直播频道：</string>
    <string name="choose_live_type">选择直播频道</string>
    <string name="invalid_url">无效链接地址</string>
    <string name="now_no_data">暂无数据</string>
    <string name="fans_m">粉丝：</string>
    <string name="week_contribution">贡献：</string>
    <string name="contribution">贡献</string>
    <string name="binding">正在绑定</string>
    <string name="hava_bind_phone">已绑定手机号</string>
    <string name="change_phone">更换手机号</string>
    <string name="changeed_use_newphone_login">更换手机后，下次登录可使用新手机号登录</string>
    <string name="recharge_id">充值账户</string>
    <string name="recharge_combo">充值套餐</string>
    <string name="vip_type">会员标志</string>
    <string name="free_vip_live_look">免费观看VIP直播</string>
    <string name="vip_jion_type">会员进场特效</string>
    <string name="choose_pay_method">选择付款方式</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="weixin_pay">微信支付</string>
    <string name="hotniao_account">点E点账户</string>
    <string name="balance">余额</string>
    <string name="earning_details">收益详情</string>
    <string name="expense_record">消费记录</string>
    <string name="withdraw_record">提现记录</string>
    <string name="withdraw_coin">提现</string>
    <string name="totle_earning">合计收益：</string>
    <string name="earning_day">今日</string>
    <string name="earning_week">本周</string>
    <string name="earning_month">本月</string>
    <string name="earning_season">近三月</string>
    <string name="earning_total">总计</string>
    <string name="invite_friend">邀请好友</string>
    <string name="my_invite_fiend">我邀请的人</string>
    <string name="invite_friend_have_award">邀请好友，奖励拿不停</string>
    <string name="your_invite_code">你的邀请码为：</string>
    <string name="cancle_focus">取消关注</string>
    <string name="cancle_focus_cannot_receive_live_msg">取消关注,将收不到Ta开播的信息,是否取消</string>
    <string name="sure_cancle_focus">是否取消关注？</string>
    <string name="not_open_vip">未开通会员</string>
    <string name="app_vip_validity_to">点E点会员,有效期至</string>
    <string name="one_month">个月</string>
    <string name="now_to_open">立即开通</string>
    <string name="please_vip_meal">请选择会员套餐</string>
    <string name="buy_Vip">购买VIP</string>
    <string name="can_sure_buy_vip">确认购买该VIP套餐吗？</string>
    <string name="your_coin_samll_to_recharge">您的%1$s不足，请充值</string>
    <string name="buy_vip_success_long_to">购买VIP成功,有效期至：</string>
    <string name="give_our_mark">给我们评分</string>
    <string name="closeed_cannot_notice_you">关闭后，不在收到Ta的开播消息提醒</string>
    <string name="exchange_id">兑换账号</string>
    <string name="please_input_zfb_id">请填写本人支付宝账号</string>
    <string name="withdraw_success_donot_exchange_id">钱将转入此账户，无法退款</string>
    <string name="with_draw_num">提现金额</string>
    <string name="withdraw_total">可提现金额:</string>
    <string name="withdraw_footing">合计提现:</string>
    <string name="verification_send_to">验证码已发送至</string>
    <string name="sms_verification">短信验证码</string>
    <string name="withdraw_result_detail">提现详情</string>
    <string name="if_message_miss_please_call_service">如有信息错误,请及时联系客服</string>
    <string name="withdraw_submit_wait_cheak">提交申请已提交，等待系统审核</string>
    <string name="back_accout">返回我的账户</string>
    <string name="vip_center">会员中心</string>
    <string name="can_not_notice_you_to_setting_open">暂时无法收到开播提醒，请到设置中去开启</string>
    <string name="login_failure_again_login">登录状态失效(或已在其他设备登录),请重新登录</string>
    <string name="main_follow_on">已关注</string>
    <string name="add_follow">加关注</string>
    <string name="main_follow">关注</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ好友</string>
    <string name="sina">新浪</string>
    <string name="ten_thousand">万</string>
    <string name="people_look">人观看</string>
    <string name="my_admin">我的房管</string>
    <string name="add_admin">添加房管</string>
    <string name="live_share_title">我在点E点，播你所想，购你所爱</string>
    <string name="live_share_content">【%1$s】正在点E点间【%2$s】,快来围观吧...</string>
    <string name="buy">购买</string>
</resources>
